--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,10 @@ body {
   font-family: 'Monoton', cursive; 
 }
 
+.f-archivoblack{
+font-family: 'Archivo Black', sans-serif;
+}
+
 a {
   text-decoration: none;
 }
