--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,11 @@ body {
 }
 
 .f-archivoblack{
-font-family: 'Archivo Black', sans-serif;
+ font-family: 'Archivo Black', sans-serif;
+}
+
+.f-quicksand{
+ font-family: 'Quicksand', sans-serif; 
 }
 
 a {
